--- a/index.html
+++ b/index.html
@@ -23,26 +23,25 @@
     </header>
 
     <main class="corpo">
-        <section> 
-         <div>
+        <section class="corpo-principal"> 
+         <div class="corpo-principal-escrito">
         <h1 class="corpo-titulo">Felix Bot</h1>
         <h2 class="corpo-sub-titulo">Deixe a sua comunidade segura de um jeito fácil</h2>
         <button class="corpo-button" type="button">Me adicione!</button>
           </div>
-          <img class="corpo-img" src="./logo 2 head.svg" alt="ninja">
+          <img class="corpo-img" src="./logo 2novo head.svg" alt="ninja">
         </section> 
         
-        <section> 
+        <section class="corpo-segundario"> 
         <h3 class="corpo-text-titulo">O que ela faz por você?</h3>
-        <p class="corpo-tex"> <strong>1. um sistema de verificação capcha </strong>para novos membros garantirem que não são robôs</p>
-        <p class="corpo-tex"><strong> 2. Possui um sistema de banimento automático </strong> para links suspeitos que forem enviados na comunidade</p>
-        <p class="corpo-tex"> <strong>3. Sistema de avisos e banimento manual,</strong> para pessoas administradoras utilizarem</p>
+        <p class="corpo-tex"> 1. Cria <strong>um sistema de verificação capcha </strong>para novos membros garantirem que não são robôs</p>
+        <p class="corpo-tex"> 2. Possui um <strong>sistema de banimento automático </strong> para links suspeitos que forem enviados na comunidade</p>
+        <p class="corpo-tex"> 3. Sistema de avisos e <strong>banimento manual,</strong> para pessoas administradoras utilizarem</p>
         </section>
     </main>
 
     <footer class="rodape">
-       <p class="rodape-text">FELIX</p>
-
+       <img class="rodape-tex" src="./FELIX.svg" alt="Felix">
     </footer>
  
 </body>
